Update example/jukebox to Java 17 & NETEMU changes